--- a/Modeling_Hue.ipynb
+++ b/Modeling_Hue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "7f44979b",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "[10105 rows x 34 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "729988f6",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "2ed717fe",
    "metadata": {},
    "outputs": [
@@ -514,6 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Dự đoán thu nhập trung bình theo ngành nghề:\n",
       "             Ngành nghề    Thu nhập dự đoán\n",
       "0    Back-End Developer  232,937,713.00 USD\n",
@@ -660,7 +661,7 @@
     }
    ],
    "source": [
-    "class SalaryPredictor:\n",
+    "class Modeling_Thunhap:\n",
     "    def __init__(self, df):\n",
     "        self.df = df.copy()\n",
     "        self.pipeline = None\n",
@@ -725,7 +726,7 @@
     "        return kq\n",
     "\n",
     "    def ket_qua(self):\n",
-    "        print(\"Dự đoán thu nhập trung bình theo ngành nghề:\")\n",
+    "        print(\"\\nDự đoán thu nhập trung bình theo ngành nghề:\")\n",
     "        print(self.tong_hop('DevType', 'Ngành nghề'))\n",
     "        print(\"\\nTheo hình thức làm việc:\")\n",
     "        print(self.tong_hop('RemoteWork', 'Hình thức làm việc'))\n",
@@ -741,9 +742,8 @@
     "        df_kq = df_kq.rename(columns={'WorkExp': 'Kinh nghiệm (năm)', 'LuongDuDoan': 'Thu nhập dự đoán'})\n",
     "        print(df_kq)\n",
     "\n",
-    "# --- Sử dụng ---\n",
-    "# df = pd.read_csv('ten_file.csv')\n",
-    "predictor = SalaryPredictor(df)\n",
+    "\n",
+    "predictor = Modeling_Thunhap(df)\n",
     "predictor.tien_xu_ly()\n",
     "predictor.train_model()\n",
     "predictor.ket_qua()\n"
